--- a/.src/Form/GeneralOptions.form
+++ b/.src/Form/GeneralOptions.form
@@ -386,7 +386,7 @@
       Index = 4
       Text = ("Audio CD")
       { ScrollView10 ScrollView
-        MoveScaled(1,1,58,52)
+        MoveScaled(3,1,58,52)
         Tag = "Audio CD"
         Expand = True
         Arrangement = Arrange.Vertical
@@ -395,15 +395,14 @@
         Padding = 8
         { NoParse23 HBox
           MoveScaled(1,1,48,4)
-          ToolTip = ("Select your Dvd device (es /dev/dvd, /dev/cdrom, /dev/sr2...).")
+          ToolTip = ("Select your CD device (es /dev/dvd, /dev/cdrom, /dev/sr2...).")
           Spacing = True
           { NoParseLabel13 Label
             MoveScaled(1,1,14,3)
             AutoResize = True
             Text = ("Audio CD Device")
           }
-          { CDDADeviceText ComboBox notifyobj
-            Name = "CDDADeviceText"
+          { CDDADeviceText ComboBox
             MoveScaled(17,0,25,4)
             Expand = True
             Text = ("Please, choose")
@@ -415,7 +414,6 @@
         }
         { NoParse25 HBox
           MoveScaled(1,7,48,4)
-          ToolTip = ("Player nice level.\nThe lower the value, the higher the priority\nthe player will get against other processes.")
           Spacing = True
           { CDDACacheCheckbox CheckBox notifyobj
             Name = "CDDACacheCheckbox"
@@ -423,7 +421,7 @@
           }
           { Label4 Label labelcheck
             Name = "Label4"
-            MoveScaled(8,1,15,3)
+            MoveScaled(5,1,15,3)
             AutoResize = True
             Text = ("CD Cache size (KB)")
           }
@@ -432,6 +430,21 @@
             MoveScaled(26,0,11,4)
             MaxValue = 1048576
             Value = 1024
+          }
+        }
+        { NoParse11 HBox
+          MoveScaled(2,13,48,4)
+          ToolTip = ("Fetch CD Audio information from internet through cddb protocol.\nNote that this may slow down or even hangs the play the very first time.")
+          Spacing = True
+          { CDDBCheckbox CheckBox notifyobj
+            Name = "CDDBCheckbox"
+            MoveScaled(1,0,3,4)
+          }
+          { Label23 Label CDDBCHECK
+            Name = "Label23"
+            MoveScaled(5,1,15,3)
+            AutoResize = True
+            Text = ("Use CDDB")
           }
         }
       }
