--- a/.src/Form/OverlayTip.form
+++ b/.src/Form/OverlayTip.form
@@ -2,6 +2,7 @@
 
 { Form Form
   MoveScaled(0,0,16,5)
+  Visible = False
   Ignore = True
   Border = False
   Stacking = Window.Above
@@ -10,8 +11,7 @@
   Arrangement = Arrange.Fill
   { TextLabel1 TextLabel
     MoveScaled(0,0,14,4)
-    Background = &HFFFF9B&
     Text = ("TextLabel1")
-    Alignment = Align.Center
+    Alignment = Align.Right
   }
 }
