Display red text (possible clipping) when volume > 100%

--- a/.src/Form/OverlayTip.form
+++ b/.src/Form/OverlayTip.form
@@ -11,6 +11,7 @@
   Arrangement = Arrange.Fill
   { TextLabel1 TextLabel
     MoveScaled(0,0,14,4)
+    Ignore = True
     Text = ("TextLabel1")
     Alignment = Align.Right
   }
