Prevent statusbar from become white

--- a/.src/Form/OverlayTip.form
+++ b/.src/Form/OverlayTip.form
@@ -11,6 +11,8 @@
   Arrangement = Arrange.Fill
   { TextLabel1 TextLabel
     MoveScaled(0,0,14,4)
+    Background = &H000000&
+    Foreground = &HFFFFFF&
     Ignore = True
     Text = ("TextLabel1")
     Alignment = Align.Right
