--- a/.src/Form/OverlayTrayTip.form
+++ b/.src/Form/OverlayTrayTip.form
@@ -1,7 +1,7 @@
 # Gambas Form File 3.0
 
 { Form Form
-  Move(0,0,252,98)
+  Move(0,0,266,98)
   #Scaled = False
   Background = &HFFFF9B&
   Ignore = True
@@ -10,47 +10,51 @@
   Stacking = Window.Above
   Sticky = True
   SkipTaskbar = True
-  { Label1 Label
-    Move(84,0,329,91)
-    Mouse = Mouse.SizeAll
-    Expand = True
-  }
-  { Timer1 #Timer
-  }
-  { HBox1 HBox
-    Move(6,80,70,16)
-    { btnprev PictureBox
-      Move(0,0,18,16)
-      Picture = Picture["icon:/16/start"]
+  { Panel2 Panel
+    Move(0,0,329,98)
+    Background = Color.SelectedBackground
+    { Label1 Label
+      Move(84,0,329,91)
+      Mouse = Mouse.SizeAll
+      Expand = True
     }
-    { btnplaypause PictureBox
-      Move(14,0,18,16)
-      Picture = Picture["icon:/16/play"]
+    { Timer1 #Timer
     }
-    { btnstop PictureBox
-      Move(28,0,18,16)
-      Picture = Picture["icon:/16/stop"]
+    { HBox1 HBox
+      Move(6,80,70,16)
+      { btnprev PictureBox
+        Move(0,0,18,16)
+        Picture = Picture["icon:/16/start"]
+      }
+      { btnplaypause PictureBox
+        Move(14,0,18,16)
+        Picture = Picture["icon:/16/play"]
+      }
+      { btnstop PictureBox
+        Move(28,0,18,16)
+        Picture = Picture["icon:/16/stop"]
+      }
+      { btnnext PictureBox
+        Move(42,0,18,16)
+        Picture = Picture["icon:/16/end"]
+      }
     }
-    { btnnext PictureBox
-      Move(42,0,18,16)
-      Picture = Picture["icon:/16/end"]
-    }
-  }
-  { Panel1 Panel
-    Move(0,0,78,78)
-    Background = &H000000&
-    Foreground = &H000000&
-    { PictureBox1 PictureBox
-      Move(0,0,77,77)
+    { Panel1 Panel
+      Move(0,0,78,78)
       Background = &H000000&
       Foreground = &H000000&
-      Stretch = True
-      Border = Border.Plain
+      { PictureBox1 PictureBox
+        Move(0,0,77,77)
+        Background = &H000000&
+        Foreground = &H000000&
+        Stretch = True
+        Border = Border.Plain
+      }
     }
-  }
-  { pinbutton ToggleButton
-    Move(226,2,24,24)
-    Visible = False
-    Picture = Picture["icon:/16/lock"]
+    { pinbutton ToggleButton
+      Move(238,5,24,24)
+      Visible = False
+      Picture = Picture["icon:/16/lock"]
+    }
   }
 }
